--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.15.2"
+  },
+  "engines": {
+    "node": "v8.0.0",
+    "npm": "5.0.0"
   }
 }
